--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 .venv/
 venv/
 
+# Environment
+.env
 
 # Node
 node_modules/
@@ -21,46 +23,5 @@ public/
 lib/
 hooks/
 .DS_Store
-components/ui
-#app/
-
-# Node modules
-node_modules/
-
-# Build output
-.next/
-out/
-dist/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Editor directories and files
-.vscode/
-.idea/
-*.swp
-
-# Optional: Supabase generated files
-#.supabase/
-
-# Optional: coverage reports
-coverage/
-
-# Optional: lock files (if you want to ignore them)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
+components/
+app/
